--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=
+DB_HOST=localhostbwtg3wyc6wjpsmh7pwht-mysql.services.clever-cloud.com
+DB_USER=utyeag645sukse6r
+DB_PASSWORD=pFL9kcFnxSgZRUV4wbeQ
 DB_NAME=ldl_db
-PORT=3000
+PORT=3306
 JWT_SECRET=mitokensecretoseguro123
 # Credenciales para el envío de Emails
 EMAIL_USER="ligadeleyendassoporte@gmail.com"
