fix: Configurar CORS para producción en Render

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DB_HOST=bwtg3wyc6wjpsmh7pwht-mysql.services.clever-cloud.com
 DB_USER=utyeag645sukse6r
 DB_PASSWORD=pFL9kcFnxSgZRUV4wbeQ
-DB_NAME=ldl_db
+DB_NAME=bwtg3wyc6wjpsmh7pwht
 PORT=3306
 JWT_SECRET=mitokensecretoseguro123
 # Credenciales para el envío de Emails
